--- a/SmartCar/SmartCarApp/app/src/main/res/layout/activity_main.xml
+++ b/SmartCar/SmartCarApp/app/src/main/res/layout/activity_main.xml
@@ -36,20 +36,26 @@
         android:layout_height="wrap_content"
         android:text="Disconnect"
         android:onClick="disconnect"/>
-
+    <TextView
+        android:layout_marginTop="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Speed"/>
     <SeekBar
         android:id="@+id/seekBarSpeed"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="30dp"
-        android:progress="0"
+        android:progress="50"
         android:max="100" />
-
+    <TextView
+        android:layout_marginTop="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Steer"/>
     <SeekBar
         android:id="@+id/seekBarBalance"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="30dp"
         android:progress="50"
         android:max="100"/>
 </LinearLayout>
