--- a/SmartCar/SmartCarApp/app/src/main/res/layout/activity_main.xml
+++ b/SmartCar/SmartCarApp/app/src/main/res/layout/activity_main.xml
@@ -14,12 +14,13 @@
         android:text="IP"
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="8dp" />
-
-    <EditText
-        android:id="@+id/editTextIP"
-        android:saveEnabled="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp" />
 
     <Button
         android:id="@+id/buttonConnect"
